@@ -1,6 +1,7 @@
 Waypoint Manager 2.8.0
 - Recompile for KSP 1.8.0
 - Fixed NRE when changing scenes (thanks Galenmacil).
+- Workaround for minor stock bug - the Dessert Airfield has the wrong icon (thanks Jacke4913).
 
 Waypoint Manager 2.7.5
 - Recompile for KSP 1.6.1
